Wed Apr  4 10:33:31 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/ftp/ftp.rb (Net::FTP#close): ignore exceptions from shutdown and
	  read on closing.

Wed Apr  4 01:48:35 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/ftp/ftp.rb (Net::FTP#close): close socket more gracefully.

	* lib/ftp/ftp.rb (Net::BufferedSocket#shutdown): added.

	* test/net/ftp/test_ftp.rb (FTPTest#create_ftp_server): wait socket
	  with shutdown and read.

Tue Apr  3 19:00:52 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/net/ftp/test_ftp.rb (FTPTest#create_ftp_server): should wait
	  a little before closing socket because if the client call
	  Net::FTP#getmultiline the socket is suddenly closed by the server in
	  the getline loop.

Tue Apr  3 18:33:38 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (setreuid, setregid): suppress warnings.
	  [ruby-core:43374][Bug #6169]

Tue Apr  3 10:18:27 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enumerator.c (inspect_enumerator): suppress uninitialized
	  instance variable warnings.  [ruby-dev:45449][Bug #6214]
	  patched by no6v (Nobuhiro IMAI).

Mon Apr  2 13:25:08 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optparse/ac.rb: autoconf-like options.

Mon Apr  2 10:34:00 2012  eregon  <eregontp@gmail.com>

	* string.c (rb_str_start_with, rb_str_end_with): raise an error if
	  an argument is not convertible to a String.
	  [ruby-core:40623][Bug #5536]

Mon Apr  2 03:35:25 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/webrick/server.rb (WEBrick::GenericServer): close socket only if
	  the socket is not closed yet.

Sun Apr  1 23:03:18 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/net/ftp.rb (Net::BufferedSocket): should delegate send() to @io
	  for Net::FTP#abort and Net::FTP#status.

Sun Apr  1 00:41:56 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/ftp.rb: fixed the domain name in examples.

Sat Mar 31 21:39:45 2012  NARUSE, Yui  <naruse@ruby-lang.org>
